tests/urmoac/input/wkt/errors/point_broken_id/errors.urmoac
Could not parse object id 's' to long.
Objects could not be loaded.
Quitting on error...
